# SADL

./: .clang-format  .gitignore  LICENSE  README.md
converter/: main.py  main_pytorch.py  model_dumper_pytorch.py  model_dumper_tf1.py  model_dumper_tf2.py
converter/constants/: constants.py  constants_pytorch.py
converter/parsing/: parsing.py
doc/: main.tex
sadl/: dimensions.h  layer.h  layer_add.h  layer_biasadd.h  layer_concat.h  layer_const.h  layer_conv2d.h  layer_conv2dtranspose.h  layer_copy.h  layer_expand.h  layer_flatten.h  layer_identity.h  layer_leakyrelu.h  layer_matmul.h  layer_maximum.h  layer_maxpool.h  layer_mul.h  layer_placeholder.h  layer_relu.h  layer_reshape.h  layer_shape.h  layer_transpose.h  layers.h  model.h  options.h  tensor.h
sample/: CMakeLists.txt  copy.h  count_mac.cpp  debug_model.cpp  dumper.h  helper.h  main.cpp  naive_quantization.cpp  pytorch.py  sample.cpp  sample_test.sh  tf2.py
sample/examples/: pytorch.py  tf1.py  tf2.py
